# begin

./: AI_AND_COMBAT.md  AI_COMBAT_INITIAL_SUMMARY.md  Cargo.toml  LICENSE  README.md  begin2_annotated.asm  beginrt.asm  prompt.md
crates/begin/: Cargo.toml
crates/begin-core/: Cargo.toml
crates/begin-core/data/: messages.json  nations.json  nearfuture.json  probes.json  ships.json  torps.json
crates/begin-core/src/: constants.rs  cycle.rs  data.rs  events.rs  game.rs  lib.rs  math.rs  object.rs  orders.rs  scenario.rs
crates/begin-core/src/ai/: behavior.rs  context.rs  missions.rs  mod.rs  targeting.rs
crates/begin-core/src/env/: kepler.rs  mod.rs  spice.rs
crates/begin-core/src/systems/: boarding.rs  damage.rs  helm.rs  mod.rs  phasers.rs  power.rs  probes.rs  repair.rs  sensors.rs  shields.rs  torpedoes.rs  tractor.rs
crates/begin-core/tests/: aiwatch.rs  combat.rs  environment.rs  physics.rs
crates/begin/src/: commands.rs  fighters.rs  main.rs  net.rs  ui.rs
tools/: extract_stats.py
