[package]
name = "begin-core"
version = "0.1.0"
edition.workspace = true
description = "BEGIN: A Tactical Starship Simulation - core simulation engine (no I/O)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# High-fidelity solar-system ephemeris via anise + de440.bsp kernels
spice = []
