[package]
name = "begin-core"
version = "0.1.0"
edition.workspace = true
description = "BEGIN: A Tactical Starship Simulation - core simulation engine (no I/O)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anise = { version = "0.6", optional = true, default-features = false, features = ["metaload"] }

[features]
default = []
# High-fidelity solar-system ephemeris via anise + de440.bsp kernels
# (set BEGIN_SPICE_KERNEL=/path/to/de440.bsp)
spice = ["dep:anise"]
